01/01/25 - Versión 1.0.0
- Se incluye implementación 3D con Cesium
- Modificación del contexto API-CNIG a API-IDEE
- Actualización de la librería commons-httpclient 3.1 a httpclient 4.5.2
- Adaptación de las clases proxy tras el cambio de librería commons-httpclient
- Mejoras sobre el proxy tras la unificación con Mapea
- Eliminar librerías en desuso y fijar versiones de librerías en package.json
- Se modifica tms.base por baseLayer en IDEE
- Eliminación de la configuración de temas así como su uso
- Se elimina la configuración de Mapbox y su uso
- Actualización y eliminación de librerías del fichero package.json
- Eliminación de la configuración de TEMPLATES_PATH y métodos getTemplateUrl, get y compile
- Añade nuevo control Implementation Switcher
- Eliminar fichero index.md de documentación para utilizar README.md en su lugar
- Se crea nueva página con enlaces a la documentación
- Eliminación y configuración de perfiles de compilación
- Eliminación de plantillas de /files/templates y /templates dentro del war
- Añadido bgcolorcontainer a los parámetros de mapas para aplicar un color al fondo del html del mapa de OpenLayers.
- Se añade mensaje de aviso al usar transparent como parámetro en capas.
- Se elimina la clase ParametersAdapterV3ToV4 de api-idee-rest.